# mav_utils

./: .gitignore  FilesScanner.spec  FilesScannerCSV.spec  PrintScaleImage.spec  README.md  pyproject.toml
src/files_scanner/: README.md  __main__.py  files.py  logger.py
src/files_scanner_csv/: __main__.py  Шаблон.csv  Шаблон.xlsx
src/print_scale_images/: __main__.py  config.json  config.py
src/print_scale_images/dialogs/: actions.py  file_selector.py  process_window.py
src/print_scale_images/handlers/: caption_builder.py  image_processor.py  image_service.py  main_controller.py  pdf_exporter.py  print_service.py  scale_calculator.py
src/utils/: __init__.py  files.py  logger.py
